Fix relative logo url on home page. Fix 3d viewer options/stats pane positioning on smaller screens

--- a/website/src/Icon.scss
+++ b/website/src/Icon.scss
@@ -17,7 +17,7 @@ div#iconoptions {
     background-color: rgba(0, 0, 0, 0.25);
     padding-top: 10px;
     padding-right: 15px;
-    position: absolute;
+    position: fixed;
     bottom: 0px;
 }
 
